--- a/UI/src/app/config/profile/myprofile/myprofile.component.html
+++ b/UI/src/app/config/profile/myprofile/myprofile.component.html
@@ -33,10 +33,12 @@
   </div>
 
 
-  <form class="notification-toggle" [formGroup]="notificationEmailForm">
-    <span class="switch-label">Notification preferences :</span>
-  
-    <div class="p-d-flex p-ml-3">
+  <form class="notification-toggle" [formGroup]="notificationEmailForm" *ngIf="isSuperAdmin || isProjectAdmin">
+    <div>
+    <span class="switch-label">Notification preferences:</span>
+    <p class="switch-desc">*Applicable to PROJECT_ADMIN and SUPERADMIN roles only</p>
+  </div>
+    <div class="p-d-flex p-ml-2">
       <p-inputSwitch formControlName="accessAlertNotification" id="accessManageToggle"
         styleClass="custom-switch"
         (onChange)="toggleNotificationEmail($event, 'accessAlertNotification')"></p-inputSwitch>
@@ -47,7 +49,7 @@
       </div>
     </div>
   
-    <div class="p-d-flex p-ml-3">
+    <div class="p-d-flex p-ml-2">
       <p-inputSwitch formControlName="errorAlertNotification" id="errorAlertToggle"
         styleClass="custom-switch" (onChange)="toggleNotificationEmail($event, 'errorAlertNotification')"></p-inputSwitch>
       <div>
