added changes for toast

--- a/UI/src/app/config/profile/myprofile/myprofile.component.html
+++ b/UI/src/app/config/profile/myprofile/myprofile.component.html
@@ -15,7 +15,7 @@
   limitations under the License.
 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
+<p-toast [style]="{marginTop: '80px'}"></p-toast>
 <div class="content">
   <div class="form-title-container p-mb-3 p-mt-3 p-ml-3 p-mr-3 clearfix bg-cyan p-d-flex">
     <div class="p-md-4 long-text float-left pad-r-0 pad-l-0 ">
